<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="ExtraTranslation">
    <string name="app_name">SpaceX</string>
    <string name="action_settings">Settings</string>
    <string name="action_filter">Filter</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">SpaceX</string>
    <string name="second_fragment_label">Launch Details</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="company_title">Company</string>
    <string name="launches_title">Launches</string>
    <string name="filter_dialog_title">Filter Launches</string>
    <string name="filter_dialog_reset_filter">Reset Filters</string>
    <string name="filter_dialog_cancel">Cancel</string>
    <string name="filter_dialog_filter">Filter</string>
    <string name="filter_dialog_start_date">Launch Start Date</string>
    <string name="filter_dialog_end_date">Launch End Date</string>
    <string name="filter_dialog_check_box">Launch Success</string>
    <string name="filter_dialog_sort_order">Sort Order</string>
    <string name="filter_dialog_sort_caption">Sort By</string>
    <string name="filter_dialog_sort_on">Newest first</string>
    <string name="filter_dialog_sort_off">Oldest first</string>

    <string name="no_launches_found">Oops! No launches found…</string>
    <string name="no_launches_found_tip">Refresh or reset your filter options to view launches.</string>
    <string name="string_ok">OK</string>

    <string name="api_fail_error">Something went wrong. Please try again.</string>
    <string name="api_network_error">Oops! No Internet Connection…</string>
    <string name="simple_ok_string">OK</string>
    <string name="error_ongoing_process">Currently fetching launches…Please wait</string>

    <string name="launch_upcoming">Upcoming</string>
    <string name="launch_success">Launched Successfully</string>
    <string name="launch_failed">Launched Failed</string>
    <string name="launch_date">Launch Date</string>
    <string name="launch_name">Launch Name</string>
    <string name="launch_time">Launch time:</string>
    <string name="launch_site">Launch site:&#160;&#160;</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="launch_video">Watch Video</string>
    <string name="launch_reddit">Reddit</string>
    <string name="launch_read_more">Read More</string>
    <string name="launch_images">Sneak Peak of the launch</string>

    <string name="launch_list_name">Mission:&#160;&#160;&#160;&#160;&#160;</string>
    <string name="launch_list_date_time">Date/time:&#160;</string>
    <string name="launch_list_rocket">Rocket:&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="launch_list_days">Days:&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>

</resources>